<resources>
    <string name="Dashboard">Dashboard</string>
    <string name="SchoolWebsite">School Website</string>
    <string name="Login">Login</string>
    <string name="About">About</string>
    <string name="Coming_Soon">Coming Soon!</string>
    <string name="Thanks">Thanks for downloading!</string>
    <string name="Description">A product of a bored teenager in Covid-19~"\n</string>
    <string name="changelog">"Changelog"</string>
    <string name="View_Pdf">"View Pdf"</string>
    <string name="Usages">"Only for personal usages"\n</string>
    <string name="School_Cal">"School Calendar"</string>
    <string name="Featured_Notice">"Featured Notice"</string>
    <string name="Half_Day_Schedule">"Half Day Schedule"</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="selectLanguage">Select language</string>
    <string name="LightTheme">Light Theme</string>
    <string name="DarkTheme">Dark Theme</string>
    <string name="SystemDefault">System default</string>
    <string name="app_name" translatable="false">KSLO</string>
    <string name="Settings">Settings</string>
    <string name="SourceCode">Source code</string>
    <string name="Chinese" translatable="false">中文(zh-HK)</string>
    <string name="English" translatable="false">English(en)</string>
    <string name="SelectTheme">Select theme</string>
    <string name="ic_drop" translatable="false">drop</string>
    <string name="ShowHomework">Show Homework</string>
    <string name="GetStarted">Get Started</string>
    <string name="ViewPdfDesc">"View offline pdf and online pdf"
    </string>
    <string name="Customise">Customise</string>
    <string name="CustomiseDesc">Customize your own theme and language</string>
    <string name="ReplayIntro">Replay Introduction</string>
    <string name="schoolLogo" translatable="false">SchoolLogo</string>
    <string name="android_auto_update_dialog_title">Found new version</string>
    <string name="android_auto_update_notify_ticker">Found new version, click to update</string>
    <string name="android_auto_update_dialog_btn_download">Download now</string>
    <string name="android_auto_update_dialog_btn_cancel">Later</string>
    <string name="android_auto_update_toast_no_new_update">Already the latest version</string>
    <string name="android_auto_update_download_progress">Downloading:%1$d%%</string>
    <string name="android_auto_update_dialog_checking">Checking version</string>
    <string name="UpdateApp">Update app</string>
    <string name="CheckForUpdate">Check for update</string>
    <string name="Go">Go!</string>
    <string name="AllowPermission">Please allow the permission on the next page for future auto updates.</string>
    <string name="Page1">Page 1</string>
    <string name="Page2">Page 2</string>
    <string name="Page3">Page 3</string>
    <string name="Page4">Page 4</string>
    <string name="Album">Album</string>
    <string name="openVideo">Open Video</string>
    <string name="Downloading">Downloading…</string>
    <string name="Page5">Page 5</string>
    <string name="Intranet">Intranet</string>
    <string name="BorrowedBooks">Borrowed books</string>
    <string name="version">Version</string>
    <string name="NewFeatures">New Features</string>
    <string name="Improvements">Improvements</string>
    <string name="changelogDescLv.1.0.1_alpha">
        *Leo joined*
    </string>
    <string name="changelogDescRv.1.0.1_alpha">
        Initial release
    </string>
    <string name="changelogDescLv.1.0.2_alpha">
        /
    </string>
    <string name="changelogDescRv.1.0.2_alpha">
        "Resolve javascript website keep popping up (\"Home\", after login)\n"\n
        "Remove unused permissions"\n
    </string>
    <string name="changelogDescLv.1.0.3_alpha">
        *Francis joined*\n
        Implement \"About\" tab\n\n
        Divide \"Home\" into \"Login\" and \"School Website\" tabs\n\n
    </string>
    <string name="changelogDescRv.1.0.3_alpha">
        Improve dashboard performance\n\n
        Resolve fragments not inflating for larger screens\n\n
        Resolve elements not always blocked\n\n
        Resolve blank documents to be able to be opened\n\n
        Resolve calendar wrong time problem (new calendar)\n\n
        Support orientation\n\n
        Support offline Pdf Viewer (only for School Calendar, 3C Half Day Schedule and The Notice of the month)
    </string>
    <string name="changelogDescLv.1.0.4_alpha">
        Add translation for Chinese
    </string>
    <string name="changelogDescRv.1.0.4_alpha">
        Improve \"About\" UI
    </string>
    <string name="changelogDescLv.1.0.5_alpha">
        Add \"Settings\" for changing between languages and themes\n\n
        Support for dark theme
    </string>
    <string name="changelogDescRv.1.0.5_alpha">
        Improve pdf viewer by adding a scroll bar and page separator
    </string>
    <string name="changelogDescLv.1.0.6_beta">
        "*Andrew joined*\n\n"
        "Add \"Intro Screen\"\n\n"
        "Implement auto internal updater\n"
    </string>
    <string name="changelogDescRv.1.0.6_beta">
        "Resolve set theme misbehaving\n\n"
        "Ask for \"Install Unknown Apps\" permission\n"
    </string>
    <string name="changelogDescLv.1.0.7_beta">
        "Implement \"Album (limited due to website limitations)\" and \"Latest News\" in \"School Website\"\n\n"
        "Add \"Splash Screen\" to cover blank loading screen\n"
    </string>
    <string name="changelogDescRv.1.0.7_beta">
        "Improve \"Intro\" UI to fit larger screens\n\n"
        "Redesign \"School Website\" (give up webview)\n"
        "Clear internal code warnings"
    </string>
    <string name="changelogDescLv.1.0.8_beta">
        "Implement \"Intranet\", and \"Borrowed Books\" in \"Login\""
    </string>
    <string name="changelogDescRv.1.0.8_beta">
        "Clears cache after each update to save storage space\n\n"
        "Redesign \"Login\" (give up webview)\n\n"
        "Improve \"Latest News\" UI\n\n"
        "Improve \"Changelog\" UI\n\n"
        "Improve overall performance by separating tasks to a different thread"
    </string>
    <string name="changelogDescLv.1.0.9_beta">
        "*Bosco joined*\n\n"
        "*Michael joined*\n\n"
        "Add Books' details\n\n"
        "Add \"Crash Screen\"\n\n"
        "Implement pull to refresh\n\n"
        "Implement last updated time\n\n"
        "Implement manual Scrolling"
    </string>
    <string name="changelogDescRv.1.0.9_beta">
        "Resolve changelog always popup\n\n"
        "Reduce app size\n\n"
        "Support non-pdf files\n\n"
        "Full support for album\n\n"
        "Progress for intranet files\n\n"
        "Resolve intranet wrong file names"
        "Make text selectable"
    </string>
    <string name="changelogDescLv.1.1.0_beta">
        "Implement auto update notice\n\n"
        "Implement offline indicator\n\n"
        "Implement icons in "About"\n\n"
        "Add new settings\n\n"
        "Add intranet file indicator\n\n"
        "Download again query"
    </string>
    <string name="changelogDescRv.1.1.0_beta">
        "Redesign \"Dashboard\" (give up webview)\n\n"
        "Completely remove webview\n\n"
        "Resolve duplicated activity after using intent\n\n"
        "Change app colour (suggested by user)\n\n"
        "Change to bottom nav\n\n"
        "Reload on touch bottom (Gallery and intranet)\n\n"
        "Increase gaps between scrollbars and lists\n\n"
        "Increase intranet mail and latest news text accuracy\n\n"
        "Resolve Android 11 file problem\n\n"
        "Resolve PdfView Crash (reported by 2 users)\n\n"
        "Large heap for less memory phones"
    </string>
    <string name="changelogDescLv.1.1.1">
        "Read label\n\n"
        "Renew books\n\n"
        "Inter-class support (2D and 3C)\n\n"
        "Special thanks to Bosco!\n\n"
        "Intranet actions (delete and move)\n\n"
        "Auto update schedule\n\n"
        "Detailed dashboard"
    </string>
    <string name="changelogDescRv.1.1.1">
        "Share files"
    </string>
    <string name="changelogDescRv.1.1.2">
        "More details (mail size, receiver…)\n\n"
        "\"Dashboard\" starts at today's position\n\n"
    </string>
    <string name="changelogDescLv.1.1.2">
        "Show downloaded files\n\n"
        "\"About\" has a new Github repo image instead of the school logo\n\n"
        "\"Login\" will start with the username box focused and enters will apply"
    </string>
    <string name="changelogDescRv.1.1.3">
        "Search\n\n"
        "Add link to join group\n\n"
        "Gallery supports zoom in controls"
    </string>
    <string name="changelogDescLv.1.1.3">
        "Use dark theme friendly text colours\n\n"
        "Remove dashboard bottom space"
    </string>
    <string name="changelogDescRv.1.1.4">
        "Fix Intranet and all links\n\n"
        "Change Dashboard "Today" to "Now\n\n"
        "Resolve null messages when no books are present"
    </string>
    <string name="changelogDescLv.1.1.4">
        "*Henry joined"\n\n"
        "*Tadan joined*\n\n"
        "Add simple calendar icon to Dashboard\n\n"
        "Remove dashboard bottom space\n\n"
        "Add link to new website"
    </string>
    <string name="changelogDescLv.1.1.5">
        "Support images\n\n" +
        "Shortcuts (Calendar, Schedule and Notice)"
        "Removed \"Introduction\""
    </string>
    <string name="changelogDescRv.1.1.5">
        "Allow sharing images\n\n" +
        "Improve downloaded files scrolling\n\n" +
        "Improve \"Changelog\""
    </string>
    <string name="changelogDescAlpha">
        "Alpha State"
    </string>
    <string name="changelogDescAlphaDescL">
        "Basic features and UI\n (mainly with webview)"
    </string>
    <string name="changelogDescAlphaDescR">
        "(1.0.1 alpha to 1.0.5-alpha)"
    </string>
    <string name="changelogDescBeta">
        "Beta State"
    </string>
    <string name="changelogDescBetaDescL">
        "Improve features and advanced features\n (mainly with Jsoup by web scrapping)"
    </string>
    <string name="HelloWelcomeBack">Hello! Welcome back!</string>
    <string name="SigninToContinue">Sign in to continue</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="BorrowedDate">Borrowed Date:</string>
    <string name="DueDate">Due Date:</string>
    <string name="Image">Image</string>
    <string name="MoreInfo">More info</string>
    <string name="ACNO" translatable="false">ACNO</string>
    <string name="ACNOSample" translatable="false">C014185</string>
    <string name="CallNumber">Call Number</string>
    <string name="PositionInLibrary">Position In Library</string>
    <string name="PositionInLibSample" translatable="false">Chinese Collection</string>
    <string name="BookClassification">Book Classification</string>
    <string name="ISBN" translatable="false">ISBN</string>
    <string name="BookClassificationSample" translatable="false">S2&amp;S3 Recommended Collection</string>
    <string name="ISBNSample" translatable="false">9789571059013</string>
    <string name="Publisher">Publisher</string>
    <string name="PublisherSample" translatable="false">尖端</string>
    <string name="EditionYear">Edition Year</string>
    <string name="EditionYearSample" translatable="false">2015</string>
    <string name="Version">Version</string>
    <string name="VersionSample" translatable="false">初版</string>
    <string name="CallNumberSample" translatable="false">541 4595 C.1</string>
    <string name="Writer">Writer</string>
    <string name="WriterSample" translatable="false">中川右介,楊裴文</string>
    <string name="RenewBook">Renew Book</string>
    <string name="File">File</string>
    <string name="DateExample" translatable="false">1/1/2021 08:10-08:15</string>
    <string name="SizeSample" translatable="false">1 kb</string>
</resources>