<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".main.parseContent.loggedInParseContent.activity.detailedBooksActivity">

        <ImageView
                android:id="@+id/BookDetailedImage"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_height="139dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/Image"
                android:background="@drawable/image_gradient"/>

        <TextView
                android:layout_below="@id/BookDetailedImage"
                android:id="@+id/DetailedBookTitle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textIsSelectable="true"/>

        <LinearLayout
                android:layout_below="@id/DetailedBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="10dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:text="@string/ACNO"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>
                <TextView
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:id="@+id/ACNOText"
                        android:text="@string/ACNOSample"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textIsSelectable="true"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:text="@string/CallNumber"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>

                <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:id="@+id/CallNumberText"
                        android:text="@string/CallNumberSample"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textIsSelectable="true"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:gravity="center">
                <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:text="@string/PositionInLibrary"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>

                <TextView
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:id="@+id/PositionInLibText"
                        android:text="@string/PositionInLibSample"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textIsSelectable="true"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:text="@string/BookClassification"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>

                <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:id="@+id/BookClassificationText"
                        android:text="@string/BookClassificationSample"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                            android:background="@color/blue"
                            android:textColor="@color/white"
                            android:text="@string/ISBN"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"/>

                    <TextView
                            android:background="@color/colorPrimary"
                            android:textColor="@color/white"
                            android:id="@+id/ISBNText"
                            android:text="@string/ISBNSample"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textIsSelectable="true"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:text="@string/Publisher"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>
                <TextView
                            android:background="@color/blue"
                            android:textColor="@color/white"
                            android:id="@+id/PublisherText"
                            android:text="@string/PublisherSample"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textIsSelectable="true"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:background="@color/blue"
                        android:textColor="@color/white"
                        android:text="@string/Writer"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"/>
                <TextView
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:id="@+id/WriterText"
                        android:text="@string/WriterSample"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textIsSelectable="true"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                            android:background="@color/colorPrimary"
                            android:textColor="@color/white"
                            android:text="@string/EditionYear"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"/>
                    <TextView
                            android:textColor="@color/white"
                            android:background="@color/blue"
                            android:id="@+id/EditionYearText"
                            android:text="@string/EditionYearSample"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textIsSelectable="true"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                            android:background="@color/blue"
                            android:textColor="@color/white"
                            android:text="@string/Version"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"/>
                    <TextView
                            android:background="@color/colorPrimary"
                            android:textColor="@color/white"
                            android:id="@+id/VersionText"
                            android:text="@string/VersionSample"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textIsSelectable="true"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/DetailedBookBorrowedDate"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/BorrowedDate"
                    android:textSize="15sp"
                    android:textColor="@color/blue"/>

            <TextView
                    android:id="@+id/DetailedBookDueDate"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/DueDate"
                    android:textSize="20sp"
                    android:textColor="@color/red"/>

            <Button
                    android:textAllCaps="false"
                    android:id="@+id/RenewBook"
                    android:text="@string/RenewBook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_background"
                    android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <ProgressBar
                android:id="@+id/detailedBookProgress"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"/>

    </RelativeLayout>
</ScrollView>