<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

    <RelativeLayout
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/DownloadedFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:text="@string/File"/>
        <LinearLayout
                android:layout_below="@+id/DownloadedFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/DownloadedFileDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DateExample"/>
            <TextView
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/DownloadedFileSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SizeSample"/>

        </LinearLayout>
        <ImageButton
                android:id="@+id/DownloadedFileMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_more_vert"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/MoreInfo"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>