<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".parseContent.loggedInParseContent.activity.LoginActivity">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/school_logo"
                    android:contentDescription="@string/schoolLogo"/>

            <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HelloWelcomeBack"
                    android:textSize="30sp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textIsSelectable="true"/>

            <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/SigninToContinue"
                    android:textIsSelectable="true"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:theme="@style/Theme.MaterialComponents.DayNight">

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/Username"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginHorizontal="10dp"
                            app:passwordToggleEnabled="true"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/Password"
                                android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                            android:id="@+id/loginButton"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:paddingVertical="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:background="@drawable/button_background"
                            android:text="@string/Login"/>
                </LinearLayout>
        </LinearLayout>
</ScrollView>