<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main.Changelog.ChangelogActivity"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                        android:textSize="15sp"
                        android:text="@string/NewFeatures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:gravity="start"/>

                <TextView
                        android:layout_centerHorizontal="true"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"/>

                <TextView
                        android:textSize="15sp"
                        android:text="@string/Improvements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/changelog_recycler"
            android:scrollbars="vertical"/>
</LinearLayout>